--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
 *.ipynb
 !Genetics.ipynb
-.ipynb_checkpoints/
+.ipynb_checkpoints
 
 
-X_Chrom/
+*Chrom
 *.vcf
 *.gz
+!chr22_test.vcf.gz
 
-__pycache__/
+__pycache__
